improved retrieval of documents from Ids